@startuml
hide circles
hide methods
'left to right direction

entity Advertisement {
    id           : INT <<PK>>
    --
    title         : VARCHAR
    description   : VARCHAR
    date          : DATE
    status        : INT
    municipality  : VARCHAR
    --
    client_id     : VARCHAR <<FK>>
    item_id       : VARCHAR <<FK>>
}

entity Item {
    id          : VARCHAR <<PK>>
    --
    condition    : INT
    image        : VARCHAR
    --
    category_id  : VARCHAR <<FK>>
}

entity Category {
    id          : VARCHAR <<PK>>
    --
    designation  : VARCHAR
}

entity Reservation_Attempt {
    id               : INT <<PK>>
    --
    date              : DATE
    status            : INT
    --
    advertisement_id  : INT <<FK>>
    client_id         : VARCHAR <<FK>>
}

entity User {
    + id                 : VARCHAR <<PK>>
    --
    user_name            : VARCHAR
    name                 : VARCHAR
    phone_number         : VARCHAR
    email                : VARCHAR
    password_hash        : VARCHAR
}

entity Interaction {
    id            : VARCHAR <<PK>>
    --
    like:         : BOOLEAN
    favorite      : BOOLEAN
    --
    client_id     : VARCHAR <<FK>>
    tip_id        : VARCHAR <<FK>>
}

entity Tip {
    id              : VARCHAR <<PK>>
    --
    title           : VARCHAR
    description     : VARCHAR
    likeCount       : INT
    favoriteCount   : INT
}

Advertisement "0..1" -- "1" Item
Advertisement "0..*" -- "1" User
Item "1" -- "0..*" Category
Reservation_Attempt "0..*" -- "1" Advertisement
Reservation_Attempt "0..*" -- "1" User
User "1" -- "0..*" Interaction
Tip "1" -left- "0..*" Interaction : \t

@enduml
